# DreamCatcher

./: .dockerignore  .gitattributes  .gitignore  README.md  SECURITY.md
app/backend/: pyproject.toml  requirements-lock.txt  requirements.txt
app/backend/app/: main.py  queue_worker.py
app/backend/tests/: test_dreamisp_planner.py  test_dreamisp_runtime.py  test_frontier_dataset_catalog.py  test_node_alias_resolver.py  test_project_handoff_contract.py  test_raw_engine_v2_contract.py  test_raw_engine_v2_shared_core.py  test_rawprep_benchmark_default_decision.py  test_rawprep_benchmark_dreamisp_consistency.py  test_rawprep_benchmark_gate.py  test_rawprep_benchmark_local_e2e_smoke.py  test_rawprep_benchmark_local_recovery_smoke.py  test_rawprep_benchmark_local_ui_language_smoke.py  test_rawprep_benchmark_measurement.py  test_rawprep_benchmark_measurement_batch.py  test_rawprep_benchmark_measurement_report_scaffold.py  test_rawprep_benchmark_packet.py  test_rawprep_benchmark_runpod_bootstrap_readiness.py  test_rawprep_benchmark_runpod_smoke.py  test_rawprep_benchmark_runpod_smoke_handoff.py  test_rawprep_benchmark_runpod_smoke_plan.py  test_rawprep_benchmark_runpod_smoke_stage.py  test_rawprep_benchmark_sample_library.py  test_rawprep_benchmark_scaffold.py  test_rawprep_benchmark_service.py  test_rawprep_benchmark_single_raw_decode_readiness.py  test_rawprep_benchmark_single_raw_fast_readiness.py  test_rawprep_benchmark_single_raw_run.py  test_rawprep_benchmark_tri_raw_run.py  test_rawprep_phase0_alignment.py  test_recipe_router.py  test_release_bundle_preflight.py  (+30 more)
(+232 files in other folders)
